[package]
name = "oxideav-dds"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-dds"
homepage = "https://github.com/OxideAV/oxideav-dds"
authors = ["Mark Karpeles"]
description = "Pure-Rust DDS (DirectDraw Surface) reader/writer for oxideav — uncompressed RGBA/RGB/luminance roundtrip plus block-compressed (DXT1/3/5, BC4/5/6H/7) pass-through"
readme = "README.md"
keywords = ["multimedia", "image", "dds", "texture", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-dds` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes the standalone
# `parse_dds` / `encode_dds_uncompressed` API plus crate-local
# `DdsImage` / `DdsError` / `DdsPixelFormat` types and never references
# `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }

[features]
default = ["registry"]

# Wires up the codec / encoder / decoder trait implementations against
# `oxideav-core` so the crate can plug into the `oxideav` framework
# registry. Default-on; turn off for image-library use-cases that just
# want the standalone `parse_dds` API.
registry = ["dep:oxideav-core"]

[dev-dependencies]
# Round 192 (depth-mode benchmarks): Criterion drives three bench
# harnesses (`decode`, `encode`, `roundtrip`) that future BCn /
# BC6H / BC7 algorithm tweaks (endpoint search, mode-picker
# refinement, partition-table sweeps, LSQ metric in unq-space) can
# A/B against. Pinned to the same 0.5 line the other OxideAV
# crates with benches (flac, magicyuv, cinepak, tta, h264) track.
criterion = "0.5"

# Round 192 benches. Each binary lives in `benches/<name>.rs` and
# is self-contained (no committed binary fixtures — every input
# surface is synthesised in-bench from a deterministic xorshift
# seed, then fed through the crate's own public standalone
# decoder / encoder entry points). Run with:
#     cargo bench -p oxideav-dds --bench <name>
[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "roundtrip"
harness = false
